[package]
name = "docutil_core"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "a pure-frontend site app powered by rust with wasm"
repository = "https://github.com/yuekcc/docutil"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.release.wasm-bindgen]
debug-js-glue = false
demangle-name-section = false
dwarf-debug-info = false

[dependencies]
wee_alloc = "0.4"
console_error_panic_hook = "0.1"
log = "*"
console_log = "*"

serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.7"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Event",
    "EventTarget",
    "History",
    "KeyboardEvent",
    "Location",
    "Element",
] }
gloo = "0.8"

sycamore = { version = "0.8.0-beta.7", features = ["suspense"] }
pulldown-cmark = { version = "0.9", default-features = false }
once_cell = "1"
