[package]
name = "web"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 's'   # or 'z' to optimize "aggressively" for size
lto = true

[dependencies]
anyhow = "1.0.52"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.14"
pulldown-cmark = "0.9.1"
reqwasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
sycamore = { version = "0.7.1", features = ["futures"] }
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.55", features = ["Window", "Location"] }
wee_alloc = "0.4.5"
