[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.52"
console_error_panic_hook = "0.1.7"
console_log = "0.2.0"
log = "0.4.14"
pulldown-cmark = { version = "0.9.1", default-features = false }
reqwasm = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7.1"
sycamore = { version = "0.7.1", features = ["futures"] }
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.55", features = [
    "Event",
    "EventTarget",
    "History",
    "HtmlAnchorElement",
    "HtmlBaseElement",
    "KeyboardEvent",
    "Location",
    "PopStateEvent",
    "Url",
    "Window",
] }
wee_alloc = "0.4.5"
gloo = "0.6"
